--- a/src/LibrarySystemForDemo.Web.Mvc/Views/Shared/Layout/_Layout.cshtml
+++ b/src/LibrarySystemForDemo.Web.Mvc/Views/Shared/Layout/_Layout.cshtml
@@ -11,7 +11,7 @@
     AbpAntiForgeryManager.SetCookie(Context);
 
     var pageTitle = !string.IsNullOrWhiteSpace(ViewBag.Title) ? ViewBag.Title + " / " : "";
-    pageTitle += "LibrarySystemForDemo";
+    pageTitle += "Library System";
 }
 <!DOCTYPE html>
 <html lang="@LanguageManager.CurrentLanguage.Name">
