--- a/src/LibrarySystemForDemo.Web.Mvc/Views/Borrower/CreateOrEdit.cshtml
+++ b/src/LibrarySystemForDemo.Web.Mvc/Views/Borrower/CreateOrEdit.cshtml
@@ -51,6 +51,10 @@
                                     }), "Select Book", new {@class = "form-control"})
 
 
+                                    <label for="expectedReturnDate">Expected Return Date</label>
+
+
+
 
                                 </div>
 
