Added #region and #endregion in C# and javascript code for better code readability

--- a/src/LibrarySystemForDemo.Web.Mvc/Views/Borrower/CreateOrEdit.cshtml
+++ b/src/LibrarySystemForDemo.Web.Mvc/Views/Borrower/CreateOrEdit.cshtml
@@ -12,6 +12,7 @@
     <environment names="Development">
         <script src="~/view-resources/Views/Borrower/CreateOrEdit.js" asp-append-version="true"></script>
     </environment>
+
 }
 
 
@@ -50,10 +51,8 @@
                                     Text = d.BookTitle
                                     }), "Select Book", new {@class = "form-control"})
 
-
+                                    @* Find some code for datepicker  *@
                                     <label for="expectedReturnDate">Expected Return Date</label>
-
-
 
 
                                 </div>
