Improve some front-end design

--- a/src/LibrarySystemForDemo.Web.Mvc/Views/Account/_Layout.cshtml
+++ b/src/LibrarySystemForDemo.Web.Mvc/Views/Account/_Layout.cshtml
@@ -28,7 +28,7 @@
 <body class="hold-transition login-page">
     <div class="login-box">
         <div class="login-logo">
-            <a href="/"><b>LibrarySystemForDemo</b></a>
+            <a href="/"><b>@L("AFG")</b></a> @* << Nakita ko din yung header sa login*@
         </div>
         <div class="card">
             @if (MultiTenancyConfig.IsEnabled)
@@ -46,7 +46,7 @@
         </div>
         <div class="row">
             <div class="col-md-12 text-center">
-                <small>&copy; @DateTime.Now.Year LibrarySystemForDemo. <b>Version </b> @AppVersionHelper.Version [@AppVersionHelper.ReleaseDate.ToString("yyyyMMdd")]</small>
+                <small>&copy; @DateTime.Now.Year @L("AFG"). <b>Version </b> @AppVersionHelper.Version [@AppVersionHelper.ReleaseDate.ToString("yyyyMMdd")]</small>
             </div>
         </div>
     </div>
