--- a/src/LibrarySystemForDemo.Web.Mvc/Views/Author/CreateOrEdit.cshtml
+++ b/src/LibrarySystemForDemo.Web.Mvc/Views/Author/CreateOrEdit.cshtml
@@ -12,6 +12,10 @@
     </environment>
 }
 
+@{
+    ViewBag.Title = "Add Author";
+
+}
 
 <section class="content">
     <div class="container-fluid">
