--- a/src/LibrarySystemForDemo.Web.Mvc/Views/Book/Index.cshtml
+++ b/src/LibrarySystemForDemo.Web.Mvc/Views/Book/Index.cshtml
@@ -27,7 +27,7 @@
 
         <a class="btn bg-blue float-sm-right" asp-controller="Book" asp-action="CreateOrEdit">
             <i class="fas fa-book-medical"></i>
-            @L("Create")
+            @L("CreateBooks")
         </a>
 
         <div class="col-sm-6">
