--- a/src/LibrarySystemForDemo.Web.Mvc/Views/Category/Index.cshtml
+++ b/src/LibrarySystemForDemo.Web.Mvc/Views/Category/Index.cshtml
@@ -27,7 +27,7 @@
 
         <a class="btn bg-blue float-sm-right" asp-controller="Category" asp-action="CreateOrEdit">
             <i class="fa fa-plus-square"></i>
-            @L("Create")
+            @L("CreateCategory")
         </a>
 
         <div class="col-sm-6">
