--- a/src/LibrarySystemForDemo.Web.Mvc/Views/Department/CreateOrEdit.cshtml
+++ b/src/LibrarySystemForDemo.Web.Mvc/Views/Department/CreateOrEdit.cshtml
@@ -13,6 +13,9 @@
     </environment>
 }
 
+@{
+    ViewBag.Title = "Add Department";
+}
 
 <section class="content">
     <div class="container-fluid">
