--- a/src/LibrarySystemForDemo.Web.Mvc/Views/Department/Index.cshtml
+++ b/src/LibrarySystemForDemo.Web.Mvc/Views/Department/Index.cshtml
@@ -24,7 +24,7 @@
 
         <a class="btn bg-blue float-sm-right" asp-controller="Department" asp-action="CreateOrEdit">
             <i class="fa fa-plus-square"></i>
-            @L("Create")
+            @L("CreateDepartments")
         </a>
 
         <div class="col-sm-6">
