--- a/src/LibrarySystemForDemo.Web.Mvc/Views/Book/CreateOrEdit.cshtml
+++ b/src/LibrarySystemForDemo.Web.Mvc/Views/Book/CreateOrEdit.cshtml
@@ -14,6 +14,10 @@
     </environment>
 }
 
+@{
+    ViewBag.Title = "Add Books";
+}
+
 
 <section class="content">
     <div class="container-fluid">
