--- a/src/LibrarySystemForDemo.Web.Mvc/Views/Borrower/Index.cshtml
+++ b/src/LibrarySystemForDemo.Web.Mvc/Views/Borrower/Index.cshtml
@@ -26,7 +26,7 @@
 
         <a class="btn bg-blue float-sm-right" asp-controller="Borrower" asp-action="CreateOrEdit">
             <i class="fa fa-plus-square"></i>
-            @L("Create")
+            @L("CreateBorrower")
         </a>
 
         <div class="col-sm-6">
