--- a/src/LibrarySystemForDemo.Web.Mvc/Views/Shared/Layout/_Footer.cshtml
+++ b/src/LibrarySystemForDemo.Web.Mvc/Views/Shared/Layout/_Footer.cshtml
@@ -1,6 +1,6 @@
 ﻿@using LibrarySystemForDemo
 <footer class="main-footer">
-    <strong>Copyright &copy; @DateTime.Now.Year <a href="javascript:void(0);">LibrarySystemForDemo</a>.</strong> All rights reserved.
+    <strong>Copyright &copy; @DateTime.Now.Year <a href="javascript:void(0);">@L("AFG")</a>.</strong> All rights reserved.
     <div class="float-right d-none d-sm-inline-block">
         <b>@L("Version")</b> @AppVersionHelper.Version [@AppVersionHelper.ReleaseDate.ToString("yyyyMMdd")]
     </div>
