--- a/src/LibrarySystemForDemo.Web.Mvc/Views/Student/CreateOrEdit.cshtml
+++ b/src/LibrarySystemForDemo.Web.Mvc/Views/Student/CreateOrEdit.cshtml
@@ -14,6 +14,9 @@
     </environment>
 }
 
+@{
+    ViewBag.Title = "Add Student";
+}
 
 <section class="content">
     <div class="container-fluid">
