--- a/src/LibrarySystemForDemo.Web.Mvc/Views/Student/Index.cshtml
+++ b/src/LibrarySystemForDemo.Web.Mvc/Views/Student/Index.cshtml
@@ -25,7 +25,7 @@
 
         <a class="btn bg-blue float-sm-right" asp-controller="Student" asp-action="CreateOrEdit">
             <i class="fa fa-plus-square"></i>
-            @L("Create")
+            @L("CreateStudents")
         </a>
 
         <div class="col-sm-6">
@@ -67,7 +67,7 @@
                                         <th>@L("StudentName")</th>
                                         <th>@L("StudentContactNumber")</th>
                                         <th>@L("StudentEmail")</th>
-                                        <th>@L("Department")</th>
+                                        <th>@L("Departments")</th>
 
                                         <th style="width: 150px">@L("Actions")</th>
                                     </tr>
