Added IsBorrowed into Borrowers Index.cshtml Views

--- a/src/LibrarySystemForDemo.Web.Mvc/Views/About/Index.cshtml
+++ b/src/LibrarySystemForDemo.Web.Mvc/Views/About/Index.cshtml
@@ -7,7 +7,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-12">
-                <h1 class="m-0 text-dark">@L("About")</h1>
+                <h1 class="m-0 text-dark">@L("AFG")</h1>
             </div>
         </div>
     </div>
