Succesfully Show the Current Date in Date Element

--- a/src/LibrarySystemForDemo.Web.Mvc/Views/Book/CreateOrEdit.cshtml
+++ b/src/LibrarySystemForDemo.Web.Mvc/Views/Book/CreateOrEdit.cshtml
@@ -30,6 +30,7 @@
                         <form name="BooksForm" role="form" class="form-horizontal">
 
                             <input type="hidden" name="Id" value="@Model?.Id" />
+                            <input type="hidden" name="IsBorrowed" value="false" id="IsBorrowed" checked />
 
                             <div class="row">
 
