--- a/src/LibrarySystemForDemo.Web.Mvc/Views/Book/Index.cshtml
+++ b/src/LibrarySystemForDemo.Web.Mvc/Views/Book/Index.cshtml
@@ -70,6 +70,8 @@
                                         <th>@L("BookPublisher")</th>
                                         <th>@L("Category")</th>
 
+                                        <th>@L("IsBorrowed")</th>
+
 
                                         <th style="width: 150px">@L("Actions")</th>
                                     </tr>
@@ -85,6 +87,7 @@
                                             <td>@books.Author?.AuthorsName</td>
                                             <td>@books?.BookPublisher</td>
                                             <td>@books.BookCategory?.CategoryName</td>
+                                            <td>@books?.IsBorrowed</td>
 
 
 
